fix spelling mistake

--- a/portfolio_site/public/blog/0.1_0.2_0.3.en.md
+++ b/portfolio_site/public/blog/0.1_0.2_0.3.en.md
@@ -96,7 +96,7 @@ width=""/>
 </p>
 
 ---
-A bit more about the RREF code — it’s actually pretty clever. But when we do RREF by hand with pen and paper, we’re basically following the same logic as a computer. We go column by column, and if `(if bs(A[i, c]) < tol)` — meaning the index number is 0 — then we swap rows.
+A bit more about the RREF code — it’s actually pretty clever. But when we do RREF by hand with pen and paper, we’re basically following the same logic as a computer. We go column by column, and if `(if abs(A[i, c]) < tol)` — meaning the index number is 0 — then we swap rows.
 
 ```python
 def rref(A, tol = 1e-12):
