--- a/portfolio_site/public/blog/0.1_0.2_0.3.zh.md
+++ b/portfolio_site/public/blog/0.1_0.2_0.3.zh.md
@@ -82,7 +82,7 @@ width=""/>
 </p>
 
 ---
-关于 RREF 的代码，可以多说两嘴，还挺精妙的，但其实我们人类在用纸笔做的时候，就是计算机的思维，按照列遍历，如果`(if bs(A[i, c]) < tol)`: : index number = 0，那么swap rows。
+关于 RREF 的代码，可以多说两嘴，还挺精妙的，但其实我们人类在用纸笔做的时候，就是计算机的思维，按照列遍历，如果`(if abs(A[i, c]) < tol)`: : index number = 0，那么swap rows。
 
 ```python
 def rref(A, tol = 1e-12):
