--- a/portfolio_site/public/blog/0.1_0.2_0.3.en.md
+++ b/portfolio_site/public/blog/0.1_0.2_0.3.en.md
@@ -140,4 +140,4 @@ def rref(A, tol = 1e-12):
 ```
 
 *2025.11.14*  
-*Written in the Row 6 / Col 3 cubicle on the left side of the second floor of the Reg, University of Chicago*
+*Written in the Row 6 / Col 3 cubicle on the left side of the fourth floor of the Reg, University of Chicago*
